--- a/TheQuize/pages/Settings.xaml
+++ b/TheQuize/pages/Settings.xaml
@@ -1,17 +1,54 @@
-﻿<Page x:Class="TheQuize.pages.Settings"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TheQuize.pages"
-      xmlns:hc="https://handyorg.github.io/handycontrol"
-      mc:Ignorable="d" 
-      Background="AliceBlue"
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Settings">
-
+﻿<Page
+    x:Class="TheQuize.pages.Settings"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:local="clr-namespace:TheQuize.pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Settings"
+    ShowsNavigationUI="True"
+    FontFamily="Candara Light"
+    d:DesignHeight="900"
+    d:DesignWidth="1600"
+    mc:Ignorable="d">
     <Grid>
-        <TextBlock Text="About"/>
+        <Label
+            Grid.ColumnSpan="2"
+            Mouse.MouseDown="Label_MouseDown"
+            Margin="20"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Background="Transparent"
+            BorderThickness="0">
+            <StackPanel Orientation="Horizontal">
+                <iconPacks:PackIconMaterial
+                    Width="50"
+                    Height="30"
+                    VerticalAlignment="Center"
+                    Kind="ArrowLeft" />
+                <TextBlock
+                    Margin="5"
+                    VerticalAlignment="Center"
+                    FontSize="35"
+                    Text="Back" />
+            </StackPanel>
+        </Label>
+       
+        <hc:ScrollViewer>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.Background>
+                    <ImageBrush ImageSource="../38003.jpg"/>
+                </Grid.Background>
+                
 
+            </Grid>
+        </hc:ScrollViewer>
     </Grid>
+    
 </Page>
